Adjust best bet list ux for better workflow Fix flickering edit search words modal
MIMIR-950

--- a/src/main/resources/assets/styles/_bestbet.scss
+++ b/src/main/resources/assets/styles/_bestbet.scss
@@ -44,5 +44,16 @@
         .ssb-dropdown label, .ssb-input label {
             display: none;
         }
+
+        .search-words {
+            display: flex;
+            align-items: center;
+            background: $ssb-dark-3;
+            padding: 8px 16px;
+            color: $ssb-white;
+            font-weight: 700;
+            border-color: 1px solid $ssb-dark-3;
+            border-radius: 20px;
+        }
     }
 }
